# openvpn3-gui

./: .gitignore  README.md  install.sh  openvpn3-gui.desktop  pyproject.toml  us-vpn0-tcp.ovpn  vpn_gui.py
openvpn3_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
